# BotDetector

./: .travis.yml  Cargo.toml  Makefile  README.md  deploy_test_autoreload.sh
data/html/: index.html
src/: analytics.rs  detector.rs  lib.rs  main.rs  server.rs  train.py
