[package]
name = "botdetector"
version = "0.1.0"
authors = ["Anders Bennehag <anders@bennehag.com>"]

[dependencies]
hyper = "^0.9.*"
persistent = "*"
mount = "*"
staticfile = "*"
lru-cache = "^0.1.*"
serde = "^0.8"
serde_json = "^0.8"
serde_derive = "0.8"
log = "^0.3.*"
env_logger = "^0.3.*"

[dependencies.iron]
version = "^0.4.*"

[dependencies.clap]
version = "^2.*"
default-features = false
features = [ "suggestions", "color" ]
